// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServicesListPage ServicesListPage should render data correctly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody pageBody"
    data-name="page-body"
  >
    <div
      class="Layout--horizontal StyledProps--main header StyledProps--flex StyledProps--flex-distribution-space-between"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withLeftIcon"
        data-testid="add-service"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="10"
            viewBox="0 0 16 16"
            width="10"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          newService
        </span>
      </button>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main GridListToggle--gridUnselected GridListToggle--gridButton Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
          data-testid="grid-view"
          data-tooltip-id="grid-view"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-grid-view StyledProps--main"
            icon="grid-view"
          >
            <svg
              data-icon="grid-view"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                grid-view
              </desc>
              <path
                d="M0 1v6h7V0H1C.45 0 0 .45 0 1zm0 14c0 .55.45 1 1 1h6V9H0v6zM15 0H9v7h7V1c0-.55-.45-1-1-1zM9 16h6c.55 0 1-.45 1-1V9H9v7z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main GridListToggle--listButton StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
          data-testid="list-view"
          data-tooltip-id="list-view"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-list StyledProps--main"
            icon="list"
          >
            <svg
              data-icon="list"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                list
              </desc>
              <path
                d="M1 3h14c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm14 10H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main container StyledProps--margin-left-xlarge StyledProps--margin-right-xlarge StyledProps--margin-top-large StyledProps--margin-bottom-large"
    >
      <div
        class="StyledProps--font StyledProps--main masonry"
        style="height: calc(100% - 66px); width: 100%;"
      >
        <div
          class="TableV2--table table"
        >
          <div
            class="TableV2--header"
            role="row"
          >
            <div
              class="TableV2--cell TableV2--sortable"
              colspan="1"
              role="columnheader"
              style="width: 60%;"
              title="Toggle SortBy"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                SERVICE
              </p>
              <span
                class="bp3-icon bp3-icon-double-caret-vertical StyledProps--main StyledProps--padding-left-small"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height="15"
                  viewBox="0 0 16 16"
                  width="15"
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="TableV2--cell TableV2--sortable"
              colspan="1"
              role="columnheader"
              style="width: 35%;"
              title="Toggle SortBy"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                DESCRIPTION
              </p>
              <span
                class="bp3-icon bp3-icon-double-caret-vertical StyledProps--main StyledProps--padding-left-small"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height="15"
                  viewBox="0 0 16 16"
                  width="15"
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="TableV2--cell TableV2--sortable"
              colspan="1"
              role="columnheader"
              style="width: 3%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                
              </p>
            </div>
          </div>
          <div
            class="TableV2--body"
          />
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main pagination"
      />
    </div>
  </div>
</div>
`;

exports[`ServicesListPage Should open Add-ServiceModal, grid and list view on click 1`] = `
<div
  class="bp3-dialog Dialog--dialog padded-dialog dialogStyles"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      cd.addService
    </h4>
  </div>
  <span
    class="bp3-icon StyledProps--main Dialog--close"
    data-icon="Stroke"
  >
    <svg
      fill="none"
      height="15"
      width="15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 .8l6 6 6-6-12 12 6-6 6 6"
        stroke="#8F90A6"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </span>
  <div
    class="StyledProps--font StyledProps--main Dialog--children StyledProps--padding-none"
  >
    <div
      class="StyledProps--font StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main yamlToggle"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-start"
          padding-top="8px"
        >
          <div
            class="PillToggle--optionBtns"
          >
            <div
              class="PillToggle--item PillToggle--selected"
              data-name="toggle-option-one"
              role="button"
              tabindex="0"
            >
              VISUAL
            </div>
            <div
              class="PillToggle--item"
              data-name="toggle-option-two"
              role="button"
              tabindex="0"
            >
              YAML
            </div>
          </div>
        </div>
      </div>
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          class="FormikForm--main"
        >
          <div>
            <div
              class="StyledProps--font StyledProps--main main"
            >
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <div
                    class="Text--withDocsTooltip"
                    data-tooltip-id="addService_identifier"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      ID
                    </p>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                        tabindex="0"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        />
                      </div>
                    </span>
                  </span>
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="Edit"
                    style="vertical-align: middle; cursor: pointer;"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                        fill="currentColor"
                        fill-rule="evenodd"
                        opacity="0.3"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="addService_name"
                    >
                      name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main bp3-label descriptionLabel"
                >
                  optionalField
                  <span
                    class="bp3-icon StyledProps--main editOpen"
                    data-icon="Edit"
                    data-name="edit"
                    data-testid="description-edit"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                        fill="currentColor"
                        fill-rule="evenodd"
                        opacity="0.3"
                      />
                    </svg>
                  </span>
                </label>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main bp3-label descriptionLabel"
                >
                  optionalField
                  <span
                    class="bp3-icon StyledProps--main editOpen"
                    data-icon="Edit"
                    data-name="edit"
                    data-testid="tags-edit"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                        fill="currentColor"
                        fill-rule="evenodd"
                        opacity="0.3"
                      />
                    </svg>
                  </span>
                </label>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main editServiceSaveCancel"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                data-id="service-save"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  save
                </span>
              </button>
               
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  cancel
                </span>
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
  <footer />
</div>
`;

exports[`ServicesListPage Should open Add-ServiceModal, grid and list view on click 2`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody pageBody"
    data-name="page-body"
  >
    <div
      class="Layout--horizontal StyledProps--main header StyledProps--flex StyledProps--flex-distribution-space-between"
    >
      <button
        class="bp3-button bp3-disabled bp3-loading Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withLeftIcon"
        data-testid="add-service"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="bp3-spinner bp3-button-spinner"
        >
          <div
            class="bp3-spinner-animation"
          >
            <svg
              height="20"
              stroke-width="16.00"
              viewBox="-3.00 -3.00 106.00 106.00"
              width="20"
            >
              <path
                class="bp3-spinner-track"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
              />
              <path
                class="bp3-spinner-head"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                pathLength="280"
                stroke-dasharray="280 280"
                stroke-dashoffset="210"
              />
            </svg>
          </div>
        </div>
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="10"
            viewBox="0 0 16 16"
            width="10"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          newService
        </span>
      </button>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <button
          class="bp3-button bp3-disabled bp3-loading bp3-minimal Button--button StyledProps--font StyledProps--main GridListToggle--gridUnselected GridListToggle--gridButton Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
          data-testid="grid-view"
          data-tooltip-id="grid-view"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <div
            class="bp3-spinner bp3-button-spinner"
          >
            <div
              class="bp3-spinner-animation"
            >
              <svg
                height="20"
                stroke-width="16.00"
                viewBox="-3.00 -3.00 106.00 106.00"
                width="20"
              >
                <path
                  class="bp3-spinner-track"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                />
                <path
                  class="bp3-spinner-head"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                  pathLength="280"
                  stroke-dasharray="280 280"
                  stroke-dashoffset="210"
                />
              </svg>
            </div>
          </div>
          <span
            class="bp3-icon bp3-icon-grid-view StyledProps--main"
            icon="grid-view"
          >
            <svg
              data-icon="grid-view"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                grid-view
              </desc>
              <path
                d="M0 1v6h7V0H1C.45 0 0 .45 0 1zm0 14c0 .55.45 1 1 1h6V9H0v6zM15 0H9v7h7V1c0-.55-.45-1-1-1zM9 16h6c.55 0 1-.45 1-1V9H9v7z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <button
          class="bp3-button bp3-disabled bp3-loading bp3-minimal Button--button StyledProps--font StyledProps--main GridListToggle--listButton StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
          data-testid="list-view"
          data-tooltip-id="list-view"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <div
            class="bp3-spinner bp3-button-spinner"
          >
            <div
              class="bp3-spinner-animation"
            >
              <svg
                height="20"
                stroke-width="16.00"
                viewBox="-3.00 -3.00 106.00 106.00"
                width="20"
              >
                <path
                  class="bp3-spinner-track"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                />
                <path
                  class="bp3-spinner-head"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                  pathLength="280"
                  stroke-dasharray="280 280"
                  stroke-dashoffset="210"
                />
              </svg>
            </div>
          </div>
          <span
            class="bp3-icon bp3-icon-list StyledProps--main"
            icon="list"
          >
            <svg
              data-icon="list"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                list
              </desc>
              <path
                d="M1 3h14c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm14 10H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main container StyledProps--margin-left-xlarge StyledProps--margin-right-xlarge StyledProps--margin-top-large StyledProps--margin-bottom-large"
    >
      <div
        class="StyledProps--font StyledProps--main masonry"
        style="height: calc(100% - 66px); width: 100%;"
      >
        <div
          class="TableV2--table table"
        >
          <div
            class="TableV2--header"
            role="row"
          >
            <div
              class="TableV2--cell TableV2--sortable"
              colspan="1"
              role="columnheader"
              style="width: 60%;"
              title="Toggle SortBy"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                SERVICE
              </p>
              <span
                class="bp3-icon bp3-icon-double-caret-vertical StyledProps--main StyledProps--padding-left-small"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height="15"
                  viewBox="0 0 16 16"
                  width="15"
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="TableV2--cell TableV2--sortable"
              colspan="1"
              role="columnheader"
              style="width: 35%;"
              title="Toggle SortBy"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                DESCRIPTION
              </p>
              <span
                class="bp3-icon bp3-icon-double-caret-vertical StyledProps--main StyledProps--padding-left-small"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height="15"
                  viewBox="0 0 16 16"
                  width="15"
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="TableV2--cell TableV2--sortable"
              colspan="1"
              role="columnheader"
              style="width: 3%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                
              </p>
            </div>
          </div>
          <div
            class="TableV2--body"
          />
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main pagination"
      />
    </div>
  </div>
</div>
`;
